# OpenNodeGraph

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  OpenShaderDesigner.ini  README.md  imgui.ini  vcpkg.json
Documentation/html/: _any_8h_source.html  _buffer_object_8h_source.html  _comparison_8h_source.html  _console_8h_source.html  _console_window_8h_source.html  _constants_8h_source.html  _directed_graph_8h_source.html  _editor_system_8h_source.html  _editor_window_8h_source.html  _engine_8h_source.html  _enum_8h_source.html  _event_system_8h_source.html  _file_manager_8h_source.html  _functions_8h_source.html  _main_menu_bar_8h_source.html  _math_8h_source.html  _optional_8h_source.html  _profiler_8h_source.html  _project_8h_source.html  _renderer_8h_source.html  _shader_graph_8h_source.html  _shaders_8h_source.html  _startup_8h_source.html  _template_utils_8h.html  _template_utils_8h_source.html  _texture_8h_source.html  _timer_8h_source.html  _trigonometry_8h_source.html  _type_8h_source.html  _unique_i_d_8h_source.html  _vector_8h_source.html  _window_8h_source.html  annotated.html  class_any.html  class_any_3_01_t_00_01_rest_8_8_8_01_4-members.html  class_any_3_01_t_00_01_rest_8_8_8_01_4.html  class_any_3_4.html  class_directed_graph-members.html  class_directed_graph.html  class_directed_graph_1_1_breadth_first-members.html  (+164 more)
Documentation/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  (+15 more)
Documentation/latex/: _any_8h_source.tex  _buffer_object_8h_source.tex  _comparison_8h_source.tex  _console_8h_source.tex  _console_window_8h_source.tex  _constants_8h_source.tex  _directed_graph_8h_source.tex  _editor_system_8h_source.tex  _editor_window_8h_source.tex  _engine_8h_source.tex  _enum_8h_source.tex  _event_system_8h_source.tex  _file_manager_8h_source.tex  _functions_8h_source.tex  _main_menu_bar_8h_source.tex  _math_8h_source.tex  _optional_8h_source.tex  _profiler_8h_source.tex  _project_8h_source.tex  _renderer_8h_source.tex  _shader_graph_8h_source.tex  _shaders_8h_source.tex  _startup_8h_source.tex  _template_utils_8h.tex  _template_utils_8h_source.tex  _texture_8h_source.tex  _timer_8h_source.tex  _trigonometry_8h_source.tex  _type_8h_source.tex  _unique_i_d_8h_source.tex  _vector_8h_source.tex  _window_8h_source.tex  annotated.tex  class_any.tex  class_any_3_01_t_00_01_rest_8_8_8_01_4.eps  class_any_3_01_t_00_01_rest_8_8_8_01_4.tex  class_any_3_4.tex  class_directed_graph.tex  class_directed_graph_1_1_breadth_first.tex  class_directed_graph_1_1_in_order.tex  (+107 more)
Include/Core/: Console.h  Engine.h  EventSystem.h  Renderer.h  Window.h
Include/Editor/: ConsoleWindow.h  EditorSystem.h  EditorWindow.h  MainMenuBar.h  Profiler.h
Include/FileSystem/: Asset.h  FileManager.h
Include/Graph/: Compiler.h  ShaderGraph.h
Include/Graph/Nodes/: Math.h  Maths.h  Shaders.h
Include/Graph/Nodes/Math/: Common.h  Comparison.h  Constants.h  Functions.h  Trigonometry.h  Vector.h
Include/Graph/Nodes/Shaders/: Function.h
Include/OpenGL/: BufferObject.h  Enum.h  Type.h
Include/Project/: Project.h
Include/Renderer/: Renderer.h
Include/Renderer/Assets/: Texture.h
Include/Utility/: DirectedGraph.h  Optional.h  Startup.h  Timer.h  UniqueID.h
Source/: Entry.cpp
Source/Core/: Console.cpp  Engine.cpp  EventSystem.cpp  Renderer.cpp  Window.cpp
Source/Editor/: ConsoleWindow.cpp  EditorSystem.cpp  EditorWindow.cpp  Profiler.cpp
Source/FileSystem/: FileManager.cpp
Source/Graph/: Compiler.cpp  ShaderGraph.cpp
Source/Graph/Nodes/: Math.cpp  Maths.cpp  Shaders.cpp
Source/Graph/Nodes/Math/: Common.cpp  Comparison.cpp  Constants.cpp  Functions.cpp  Trigonometry.cpp  Vector.cpp
Source/Graph/Nodes/Shaders/: Function.cpp
Source/Project/: Project.cpp
Source/Renderer/: Renderer.cpp
Source/Renderer/Assets/: Texture.cpp
Test/: Function.sf
